@@ -5,6 +5,9 @@ Version 0.6
 -----------
 (released Dec XX, 2006)
 
+- Added option for the HTML formatter to write the CSS to an external file
+  in "full document" mode.
+
 - Added RTF formatter.
 
 - Added Bash and Apache configuration lexers (thanks to Tim Hatch).
